Add live lock nodes to the interleaving tree without duplicate nodes from last codelocation of spin cycle (livelock do not block yet)